--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-image: url("./Image/Free-Simple-Black-Seamless-Pattern-for-Website-Background.jpg");
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+.Menu{
+  
+  border: solid black 2px;
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: rgb(247, 92, 92);
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+}
+
+.Menu button,
+.Quiz button,
+.EndScreen button{
+  
+  width: 300px;
+  height: 50px;
+  margin: 5px;
+  border-radius: 12px;
+  font-size: 20px;
+  text-decoration: none;
+  border: none;
+  padding: 12px 40px;
+  background-color: rgba(0, 0, 0, 0.637);
+  color: #fff;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
+  outline: none;
+  transition: 0.2s all;
+
+}
+
+.Menu button:active,
+.Quiz button:active,
+.EndScreen button:active{
+  transform: scale(0.98);
+}
+
+.Quiz{
+  border: solid black 2px;
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: rgb(56, 165, 179);
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+}
+
+.Menu, 
+.Quiz,
+.EndScreen
+{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.options{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.EndScreen{
+  border: solid black 2px;
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: rgba(75, 105, 61, 0.66);
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* .topnav a.active {
+  background-color: #5309939b;
+  color: white;
+} */
+
+.footer {
+  
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
